@@ -1,3 +1,3 @@
 if @project
-  page.replace_html "project_#{@project.name}", :partial => 'project', :locals => {:project => @project }
+  page.replace "project_#{@project.name}", :partial => 'project', :locals => {:project => @project }
 end
