@@ -32,7 +32,7 @@ Link to /builds/Project.four (project with a dot without builds) breaks, because
 
 To finish the RSS story:
    * RSS icon
-
+   * Fiogure out why Firefox 1.5 goes nuts on Rolf's PC when you try to open a feed in it.
 Committed_by and comments on the dashboard need to be limited to a certain number of characters.
 Currently, we preservce newlines (looks nicer), but may cause complications if there are too many newlines.
 
